--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,10 @@
 			<artifactId>spring-boot-devtools</artifactId>
 		</dependency>
 		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
 		
 		<dependency>
 			<groupId>mysql</groupId>
